<resources>
    <string name="app_name">Android-Kotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_method">Method</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_slideshow">Slideshow</string>
    <string name="title_log">Log</string>
    <string name="todo">TODO</string>
    <string name="Picture">Choose Picture</string>

    <string name="method_log">@string/title_log</string>
    <string name="method_contact">Contact</string>
    <string name="method_next">Next</string>
    <string name="method_permission">Permission</string>
    <string name="method_http">Http</string>
    <string name="method_path">Path</string>

    <string-array name="method_list">
        <item>@string/method_log</item>
        <item>@string/method_permission</item>
        <item>@string/method_http</item>
        <item>@string/method_contact</item>
        <item>@string/method_path</item>
    </string-array>
    <string-array name="path_list">
        <item>can write</item>
        <item>has sd card</item>
        <item>root system</item>
        <item>root data</item>
        <item>user data</item>
        <item>user cache</item>
        <item>user code cache</item>
        <item>internal files</item>
        <item>internal data</item>
        <item>internal cache</item>
        <item>internal shared prefs</item>
        <item>internal databases</item>
        <item>internal code cache</item>
        <item>internal append</item>
        <item>internal private</item>
        <item>external code cache</item>
        <item>external empty</item>
        <item>external music</item>
        <item>external podcasts</item>
        <item>external alarms</item>
        <item>external notifications</item>
        <item>external pictures</item>
        <item>external movies</item>
        <item>external download</item>
        <item>external dcim</item>
        <item>external documents</item>
        <item>external public empty</item>
        <item>external public music</item>
        <item>external public podcasts</item>
        <item>external public alarms</item>
        <item>external public notifications</item>
        <item>external public pictures</item>
        <item>external public movies</item>
        <item>external public download</item>
        <item>external public dcim</item>
        <item>external public documents</item>
    </string-array>
    <string-array name="log_list">
        <item>Log V</item>
        <item>Log V with Tag</item>
        <item>Log D</item>
        <item>Log D with Tag</item>
        <item>Log I</item>
        <item>Log I with Tag</item>
        <item>Log W</item>
        <item>Log W with Tag</item>
        <item>Log E</item>
        <item>Log E with Tag</item>
        <item>Log A</item>
        <item>Log A with Tag</item>
        <item>Log Json</item>
        <item>Log Json with Tag</item>
        <item>Log Xml</item>
        <item>Log Xml with Tag</item>
        <item>Log Error</item>
    </string-array>
    <string-array name="url_address">
        <item>http://test.taoqian123.com.cn</item>
        <item>https://microservice.wacai.com/loan/leap/test</item>
        <item>http://www.baidu.com</item>
        <item>https://www.baidu.com</item>
        <item>http://liyina91.github.io/liyina/UploadPictures/</item>
        <item>https://docs.xinyan.com/docs/qzh5?token=jhqbrm8neXlb</item>
        <item>https://mp.weixin.qq.com/s/zgfLOMD2JfZJKfHx-5BsBg</item>
    </string-array>
    <string-array name="banner_transformer">
        <item>Accordion</item>
        <item>BackgroundToForeground</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>Custom</item>
        <item>Default</item>
        <item>DepthPage</item>
        <item>FlipHorizontal</item>
        <item>FlipVertical</item>
        <item>ForegroundToBackground</item>
        <item>MeiZuEffect</item>
        <item>RotateDown</item>
        <item>RotateUp</item>
        <item>ScaleInOut</item>
        <item>ScaleIn</item>
        <item>ScaleY</item>
        <item>Stack</item>
        <item>Tablet</item>
        <item>ZoomIn</item>
        <item>ZoomOutSlide</item>
        <item>ZoomOut</item>
    </string-array>

    <string name="span_touch_fix_1">\@Colin:span的点击事件与textView的点击事件完全分离#Colin#</string>
    <string name="span_touch_fix_2">\@Colin:默认情况下，如果textView添加了clickSpan,#Colin#那么textView的事件将无法冒泡到父级。
        但在某些场景（例如微博评论需要整条可点），我们需要将事件冒泡给父元素进行处理。#qmui#</string>
    <string-array name="flow_data">
        <item>Touch</item>
        <item>C语言</item>
        <item>Java语言</item>
        <item>Objective-C语言</item>
        <item>C++语言</item>
        <item>PHP语言</item>
        <item>C#语言</item>
        <item>(Visual) Basic语言</item>
        <item>Python语言</item>
        <item>Perl语言</item>
        <item>JavaScript语言</item>
        <item>Ruby语言</item>
        <item>Visual Basic .NET语言</item>
        <item>Transact-SQL语言</item>
        <item>Delphi/Object Pascal语言</item>
        <item>Kotlin语言</item>
        <item>Swift语言</item>
        <item>Android语言</item>
        <item>Go语言</item>
        <item>.Net语言</item>
        <item>PL/SQL语言</item>
        <item>C++语言</item>
    </string-array>
</resources>