<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_home" />
        <item
            android:id="@+id/fragment_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_gallery" />
        <item
            android:id="@+id/fragment_method"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_method" />
        <item
            android:id="@+id/fragment_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_slideshow" />
    </group>
</menu>